--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Counter</title>
+  <title>Calculator
+  </title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Counter</h1>
-
-  <h3 id="countLabel">0</h3>
-  <div class="btn"> <button id="decBtn">Decrease</button>
-    <button id="resBtn">Reset</button>
-    <button id="incBtn">Increase</button>
-    <script src="index.js"></script>
-  </div>
- 
+  <h1>Calculator</h1>
+  <label>Number 1 : <input id="num1" type="text"> </label><br>
+  <label>Number 2 : <input id="num2" type="text"> </label><br><br>
+  <button id="add">+</button>
+  <button id="sub">-</button>
+  <button id="mult">*</button>
+  <button id="div">/</button><br><br>
+  <h3 id="result">Result : </h3>
+  <script src="index.js"></script>
 </body>
 </html>
